crates/cli/tests/snapshots/run_system_test__windows__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ windows:exitNonZero
stdout
▪▪▪▪ windows:exitNonZero (100ms)
stderr
Error: task_runner::run_failed

  × Task windows:exitNonZero failed to run. View hash details with moon query
  │ hash hash1234.
  ╰─▶ Process cmd.exe failed with a 1 exit code.


