crates/cli/tests/snapshots/run_system_test__windows__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ windows:exitZero
stdout
▪▪▪▪ windows:exitZero (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



