crates/cli/tests/snapshots/run_system_test__windows__inherits_moon_env_vars.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ windows:envVarsMoon
MOON_CACHE=read-write
MOON_TARGET=windows:envVarsMoon
MOON_PROJECT_ID=windows
▪▪▪▪ windows:envVarsMoon (100ms)

Tasks: 1 completed
 Time: 100ms



