crates/cli/tests/snapshots/run_system_test__windows__retries_on_failure_till_count.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ windows:retryCount
stdout
▪▪▪▪ windows:retryCount (100ms)
▪▪▪▪ windows:retryCount (2/4)
stdout
▪▪▪▪ windows:retryCount (2/4, 100ms)
▪▪▪▪ windows:retryCount (3/4)
stdout
▪▪▪▪ windows:retryCount (3/4, 100ms)
▪▪▪▪ windows:retryCount (4/4)
stdout
▪▪▪▪ windows:retryCount (4/4, 100ms)
stderr 
stderr 
stderr 
stderr 
Error:   × Failed to run cmd.exe (exit code 1)



