crates/cli/tests/snapshots/run_system_test__windows__runs_bat_script.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ windows:bat
stdout
▪▪▪▪ windows:bat (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



