crates/cli/tests/snapshots/run_system_test__windows__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ windows:runFromWorkspace
workspace
▪▪▪▪ windows:runFromWorkspace (100ms)

Tasks: 1 completed
 Time: 100ms



