crates/cli/tests/snapshots/run_system_test__windows__sets_env_vars.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ windows:envVars
MOON_FOO=abc
MOON_BAR=123
MOON_BAZ=true
▪▪▪▪ windows:envVars (100ms)

Tasks: 1 completed
 Time: 100ms



